[metadata]
name = yadoma
version = 59.0.post1
author = N.V. Haenel & Ingo Fruend
author_email = github@ingofruend.net
description = Yet another dotfile manager
long_description = file: README.rst
keywords = dotfiles, config management
license = APACHE v2.0
classifiers =
    Programming Language :: Python :: 3

[options]
install_requires =
    docopt
    pyyaml
package_dir =
    =src/main/python/
packages = find:

[options.packages.find]
where = src/main/python

[options.entry_points]
console_scripts =
    yadoma = yadoma.main:main
